--- a/public/.htaccess
+++ b/public/.htaccess
@@ -24,7 +24,7 @@ ErrorDocument 404 /404.php
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^([^/]+)/?$ $1.php [L,QSA]
+RewriteRule ^(.*)$ $1.php [L]
 
 # Personalizar página de erro 404
 ErrorDocument 404 /404.php
