--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,12 +1,8 @@
 RewriteEngine On
 
-# Redirecionar para HTTPS
-RewriteEngine On
-RewriteCond %{HTTPS} off [OR]
-RewriteCond %{HTTP_HOST} ^www\. [NC]
-RewriteCond %{HTTP:X-Forwarded-Proto} =http
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
-
+# Redirecionar para HTTPS (SSL apenas no servidor) Muitas requisições
+# RewriteCond %{HTTPS} off
+# RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 # Limitar métodos HTTP permitidos
 # <LimitExcept GET POST HEAD>
