--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,19 +1,42 @@
 RewriteEngine On
 
-# Redirecionar para HTTPS (SSL apenas no servidor) Muitas requisições
-RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# Redirecionar para HTTPS e remover www
+RewriteEngine On
+RewriteCond %{HTTPS} off [OR]
+RewriteCond %{HTTP_HOST} ^www\. [NC]
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301,NE]
 
-# Limitar métodos HTTP permitidos
-# <LimitExcept GET POST HEAD>
-#     Deny from all
-# </LimitExcept>
+# Redirecionar index para raiz
+RewriteRule ^index/?$ / [R=301,L]
+RewriteRule ^index\.php/?$ / [R=301,L]
 
-# Ativar HSTS (HTTP Strict Transport Security)
-Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^home\.matheusrpsouza\.com$ [NC]
+RewriteRule ^$ /startpage.html [L]
 
-# Permitir acesso a arquivos CSS, JS, PNG, JPG, JPEG, GIF, WEBP, SVG, ICO em qualquer nível
-RewriteRule \.(css|js|png|jpg|jpeg|gif|webp|svg|ico|svgz)$ - [L]
+
+# Redirecionar 404 para o script PHP
+ErrorDocument 404 /404.php
+
+# Adicionar .php internamente
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^(.*)$ $1.php [L]
+
+# Personalizar página de erro 404
+ErrorDocument 404 /404.php
+
+# Remover extensão .php visível
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
+RewriteRule ^ %1 [R=301,L]
+
+# Forçar HTTPS
+RewriteEngine On
+RewriteCond %{HTTP:X-Forwarded-Proto} =http
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 # Bloquear acesso a diretórios (não é necessário se não houver diretórios acessíveis)
 RewriteRule ^(.*)/ - [R=403,L]
@@ -85,9 +108,9 @@ LimitRequestBody 1048576
 # Proteger contra vazamento de informações de erro
 Header set X-Permitted-Cross-Domain-Policies "none"
 
-ErrorDocument 403 '<script>window.location.href = "403";</script>'
-ErrorDocument 404 '<script>window.location.href = "404";</script>'
-ErrorDocument 500 '<script>window.location.href = "500";</script>'
+ErrorDocument 403 /403.php
+ErrorDocument 404 /404.php
+ErrorDocument 500 /500.php
 
 # Configurar cache do navegador
 <IfModule mod_expires.c>
@@ -125,21 +148,12 @@ RewriteRule ^search_results$ search_results.php [L]
     Require all granted
 </Files>
 
-# Cookies
-Header always edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure;SameSite=Strict
+# Adicionar headers de segurança via .htaccess (opcional, já que temos no PHP)
+<IfModule mod_headers.c>
+    Header always set X-Frame-Options "DENY"
+    Header always set X-Content-Type-Options "nosniff"
+    Header always set X-XSS-Protection "1; mode=block"
+    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+</IfModule>
 
-# HSTS (HTTP Strict Transport Security)
-Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-
-# X-Frame-Options
-Header always set X-Frame-Options "SAMEORIGIN"
-
-# X-Content-Type-Options
-Header set X-Content-Type-Options "nosniff"
-
-# Referrer Policy
-Header set Referrer-Policy "strict-origin-when-cross-origin"
-
-# Content Security Policy (CSP)
-Header set Content-Security-Policy "frame-ancestors 'self'"
 
