--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,16 +1,36 @@
 RewriteEngine On
 
 # Redirecionar para HTTPS e remover www
+RewriteEngine On
 RewriteCond %{HTTPS} off [OR]
 RewriteCond %{HTTP_HOST} ^www\. [NC]
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301,NE]
 
 # Redirecionar index para raiz
 RewriteRule ^index/?$ / [R=301,L]
 RewriteRule ^index\.php/?$ / [R=301,L]
 
-# Remover extensão .php visível
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^home\.matheusrpsouza\.com$ [NC]
+RewriteRule ^$ /startpage.html [L]
+
+
+# Redirecionar 404 para o script PHP
+ErrorDocument 404 /404.php
+
+# Adicionar .php internamente
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{DOCUMENT_ROOT}/$1.php -f
+RewriteRule ^([^/]+)/?$ $1.php [L,QSA]
+
+# Personalizar página de erro 404
+ErrorDocument 404 /404.php
+
+# Remover extensões visíveis
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.(php|html) [NC]
 RewriteRule ^ %1 [R=301,L]
 
 # Forçar HTTPS
@@ -135,5 +155,3 @@ RewriteRule ^search_results$ search_results.php [L]
     Header always set X-XSS-Protection "1; mode=block"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
-
-
