--- a/public/.htaccess
+++ b/public/.htaccess
@@ -16,3 +16,50 @@ RewriteCond %{HTTP_HOST} ^[^.]+\.[^.]+$
 RewriteCond %{HTTP_HOST} !^$
 RewriteCond %{HTTPS}s ^on(s)|
 RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+<FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf)$">
+Header set Cache-Control "max-age=2592000, public"
+</FilesMatch>
+
+RewriteEngine On
+RewriteCond %{HTTP_REFERER} !^$
+RewriteCond %{HTTP_REFERER} !^http(s)?://(www\.)?matheusrpsouza.com [NC]
+RewriteRule \.(jpg|jpeg|png|gif)$ - [NC,F,L]
+
+RewriteEngine On
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+
+DirectoryIndex inicio.php
+
+<IfModule mod_deflate.c>
+AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript
+</IfModule>
+
+<LimitExcept GET POST>
+Deny from all
+</LimitExcept>
+
+Header set Content-Security-Policy "default-src 'self'"
+
+Header set Content-Security-Policy "script-src 'self'; object-src 'none'"
+
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^ http://%1%{REQUEST_URI} [L,R=301]
+
+AddDefaultCharset UTF-8
+
+<FilesMatch "\.(ini|config|env|sql|bak|gz|zip|tgz)$">
+Deny from all
+</FilesMatch>
+
+Header set Access-Control-Allow-Origin "*"
+
+Header always append X-Frame-Options DENY
+
+SetEnvIfNoCase User-Agent "MJ12Bot" BLOCK_BAD_BOTS
+SetEnvIfNoCase User-Agent "MauiBot" BLOCK_BAD_BOTS
+Deny from env=BLOCK_BAD_BOTS
