--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,13 +4,11 @@ RewriteEngine On
 # Define o diretório base
 RewriteBase /
 
-# Força HTTPS
+# Força HTTPS e remove www em uma única regra (evita loop)
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [OR]
 RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-# Remove www
-RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} ^(?:www\.)?(.*)$
+RewriteRule ^(.*)$ https://%1/$1 [L,R=301]
 
 # Protege contra ataques XSS e outros
 Header set X-XSS-Protection "1; mode=block"
@@ -34,16 +32,16 @@ Options -Indexes
     Deny from all
 </FilesMatch>
 
-# Remove extensão .php
+# Remove extensão .php (regra ajustada)
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.*)$ $1.php [L]
+RewriteRule ^(.+)$ $1.php [L]
 
-# Remove 'index' da URL
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.php\ HTTP/
-RewriteRule ^index\.php$ / [R=301,L]
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\ HTTP/
-RewriteRule ^index$ / [R=301,L]
+# Remove 'index' da URL (regra ajustada)
+RewriteCond %{THE_REQUEST} ^GET\ /index[^\ ]*\ HTTP/
+RewriteRule ^index\.php$ / [L,R=301]
+RewriteRule ^index$ / [L,R=301]
 
 # Limita métodos HTTP permitidos
 <LimitExcept GET POST HEAD>
