--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,11 +4,13 @@ RewriteEngine On
 # Define o diretório base
 RewriteBase /
 
-# Força HTTPS e remove www em uma única regra (evita loop)
-RewriteCond %{HTTP_HOST} ^www\.(.*)$ [OR]
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP_HOST} ^(?:www\.)?(.*)$
-RewriteRule ^(.*)$ https://%1/$1 [L,R=301]
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+    RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L]
+</IfModule>
 
 # Protege contra ataques XSS e outros
 Header set X-XSS-Protection "1; mode=block"
