--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,57 +1,59 @@
-# Ativa o motor de reescrita
-RewriteEngine On
-
-# Define o diretório base
-RewriteBase /
-
+# Verifica se o módulo de reescrita está disponível
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    RewriteBase /
+    
+    # Força HTTPS e remove www
     RewriteCond %{HTTPS} off
     RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
     RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L]
+    
+    # Remove extensão .php
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}.php -f
+    RewriteRule ^(.+)$ $1.php [L]
+    
+    # Remove 'index' da URL
+    RewriteCond %{THE_REQUEST} ^GET\ /index[^\ ]*\ HTTP/
+    RewriteRule ^index\.php$ / [L,R=301]
+    RewriteRule ^index$ / [L,R=301]
 </IfModule>
 
-# Protege contra ataques XSS e outros
-Header set X-XSS-Protection "1; mode=block"
-Header set X-Frame-Options "SAMEORIGIN"
-Header set X-Content-Type-Options "nosniff"
-Header set Referrer-Policy "strict-origin-when-cross-origin"
-Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+# Headers de segurança
+<IfModule mod_headers.c>
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Frame-Options "SAMEORIGIN"
+    Header set X-Content-Type-Options "nosniff"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+    Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+</IfModule>
 
-# Desabilita listagem de diretórios
-Options -Indexes
+# Configurações de diretório
+<IfModule mod_autoindex.c>
+    Options -Indexes
+</IfModule>
 
-# Protege arquivos importantes
-<FilesMatch "^\.(?!well-known)">
-    Order allow,deny
-    Deny from all
-</FilesMatch>
+# Proteção de arquivos
+<IfModule mod_authz_core.c>
+    # Protege arquivos ocultos
+    <FilesMatch "^\.(?!well-known)">
+        Require all denied
+    </FilesMatch>
+    
+    # Bloqueia acesso a arquivos sensíveis
+    <FilesMatch "(?i:composer\.json|composer\.lock|package\.json|package-lock\.json|\.gitignore|\.env)$">
+        Require all denied
+    </FilesMatch>
+    
+    # Limita métodos HTTP permitidos
+    <LimitExcept GET POST HEAD>
+        Require all denied
+    </LimitExcept>
+</IfModule>
 
-# Bloqueia acesso a arquivos sensíveis
-<FilesMatch "(?i:composer\.json|composer\.lock|package\.json|package-lock\.json|\.gitignore|\.env)$">
-    Order allow,deny
-    Deny from all
-</FilesMatch>
-
-# Remove extensão .php (regra ajustada)
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.+)$ $1.php [L]
-
-# Remove 'index' da URL (regra ajustada)
-RewriteCond %{THE_REQUEST} ^GET\ /index[^\ ]*\ HTTP/
-RewriteRule ^index\.php$ / [L,R=301]
-RewriteRule ^index$ / [L,R=301]
-
-# Limita métodos HTTP permitidos
-<LimitExcept GET POST HEAD>
-    Order deny,allow
-    Deny from all
-</LimitExcept>
-
-# Configuração de cache para melhor performance
+# Cache
 <IfModule mod_expires.c>
     ExpiresActive On
     ExpiresByType image/jpg "access plus 1 year"
@@ -73,4 +75,28 @@ RewriteRule ^index$ / [L,R=301]
     AddOutputFilterByType DEFLATE application/xhtml+xml
     AddOutputFilterByType DEFLATE application/javascript
     AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
+
+# Controle de taxa de requisições
+<IfModule mod_ratelimit.c>
+    # Limita a largura de banda para 400KB/s
+    SetOutputFilter RATE_LIMIT
+    SetEnv rate-limit 400
+</IfModule>
+
+<IfModule mod_evasive20.c>
+    # Número máximo de requisições para uma página em específico
+    DOSPageCount 2
+    # Intervalo de tempo para contar as requisições (em segundos)
+    DOSPageInterval 1
+    # Tempo de bloqueio (em segundos)
+    DOSBlockingPeriod 10
+</IfModule>
+
+# Limitar conexões simultâneas
+<IfModule mod_qos.c>
+    # Máximo de conexões simultâneas por IP
+    QS_ClientEntries 10
+    # Máximo de conexões simultâneas para o servidor
+    QS_SrvMaxConnPerIP 50
 </IfModule>
