--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,7 +14,7 @@
     Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
     
     # Content Security Policy (CSP)
-    Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'strict-dynamic'; frame-ancestors 'none'; form-action 'self'; base-uri 'none'; object-src 'none'"
+    # Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'strict-dynamic'; frame-ancestors 'none'; form-action 'self'; base-uri 'none'; object-src 'none'"
 </IfModule>
 
 # Configurações de diretório
