--- a/public/.htaccess
+++ b/public/.htaccess
@@ -87,3 +87,23 @@
     # Máximo de conexões simultâneas para o servidor
     QS_SrvMaxConnPerIP 50
 </IfModule>
+
+# Permitir acesso aos scripts e CSS específicos
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # Permitir acesso aos arquivos JS específicos
+    RewriteRule ^private/source/pages/layouts/components/html\.scripts&endBody/js/content_dynamic\.js$ ../private/source/pages/layouts/components/html.scripts&endBody/js/content_dynamic.js [L]
+    RewriteRule ^private/source/pages/layouts/components/html\.scripts&endBody/js/resize_body_bootstrap\.js$ ../private/source/pages/layouts/components/html.scripts&endBody/js/resize_body_bootstrap.js [L]
+    RewriteRule ^private/source/pages/layouts/components/html\.scripts&endBody/js/restriction_against_iframe\.js$ ../private/source/pages/layouts/components/html.scripts&endBody/js/restriction_against_iframe.js [L]
+    RewriteRule ^private/source/pages/layouts/components/html\.scripts&endBody/js/tooltip_popover\.js$ ../private/source/pages/layouts/components/html.scripts&endBody/js/tooltip_popover.js [L]
+    
+    # Permitir acesso aos arquivos CSS
+    RewriteRule ^private/source/pages/layouts/components/html\.head&startBody/css/([^/]+)\.css$ ../private/source/pages/layouts/components/
+</IfModule>
+
+# Configurar headers corretos para JS e CSS
+<FilesMatch "\.(js|css)$">
+    Header set Cache-Control "public, max-age=31536000"
+    Header set X-Content-Type-Options "nosniff"
+</FilesMatch>
