--- a/public/.htaccess
+++ b/public/.htaccess
@@ -116,3 +116,8 @@ RewriteRule ^(css|img|js)/.*$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [L,QSA]
+
+<FilesMatch "\.(css)$">
+    Order Allow,Deny
+    Allow from all
+</FilesMatch>
