--- a/public/.htaccess
+++ b/public/.htaccess
@@ -106,11 +106,13 @@ RewriteEngine On
 <FilesMatch "\.(js|css|png|jpg|jpeg|gif|webp|svg)$">
     Header set Cache-Control "public, max-age=31536000"
     Header set X-Content-Type-Options "nosniff"
+    Order Allow,Deny
+    Allow from all
 </FilesMatch>
 
 # Permitir acesso direto aos arquivos estáticos
 RewriteCond %{REQUEST_FILENAME} -f
-RewriteRule ^(css|img|js)/.*$ - [L]
+RewriteRule ^(css|js|img)/(.*)$ $1/$2 [L]
 
 # Redirecionar outras requisições para o index.php
 RewriteCond %{REQUEST_FILENAME} !-f
