--- a/public/.htaccess
+++ b/public/.htaccess
@@ -12,35 +12,49 @@ RewriteEngine On
     Header set X-Content-Type-Options "nosniff"
     Header set Referrer-Policy "strict-origin-when-cross-origin"
     Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-    
-    # Content Security Policy (CSP)
-    Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'strict-dynamic'; frame-ancestors 'none'; form-action 'self'; base-uri 'none'; object-src 'none'"
 </IfModule>
 
 # Configurações de diretório
 <IfModule mod_autoindex.c>
-    Options -Indexes
+    Options -Indexes +FollowSymLinks
 </IfModule>
 
-# Proteção de arquivos
+# Proteção de arquivos - IMPORTANTE: Mudando de "granted" para "all denied" exceto arquivos públicos
 <IfModule mod_authz_core.c>
     # Protege arquivos ocultos
     <FilesMatch "^\.(?!well-known)">
-        Require all granted
+        Require all denied
     </FilesMatch>
     
     # Bloqueia acesso a arquivos sensíveis
     <FilesMatch "(?i:composer\.json|composer\.lock|package\.json|package-lock\.json|\.gitignore|\.env)$">
-        Require all granted
+        Require all denied
     </FilesMatch>
     
-    # Limita métodos HTTP permitidos
-    <LimitExcept GET POST HEAD>
+    # Permite acesso a arquivos estáticos
+    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|webp|svg|ico|woff|woff2|ttf|eot)$">
         Require all granted
-    </LimitExcept>
+    </FilesMatch>
 </IfModule>
 
-# Cache
+# Regras de reescrita para arquivos estáticos
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # Se o arquivo/diretório não existe, continua as regras
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    
+    # Redireciona para o index.php
+    RewriteRule ^(.*)$ index.php [QSA,L]
+    
+    # Permite acesso direto a arquivos estáticos existentes
+    RewriteCond %{REQUEST_FILENAME} -f [OR]
+    RewriteCond %{REQUEST_FILENAME} -d
+    RewriteRule ^ - [L]
+</IfModule>
+
+# Cache para arquivos estáticos
 <IfModule mod_expires.c>
     ExpiresActive On
     ExpiresByType image/jpg "access plus 1 year"
@@ -54,56 +68,10 @@ RewriteEngine On
 
 # Compressão GZIP
 <IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/xml
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE application/xhtml+xml
-    AddOutputFilterByType DEFLATE application/javascript
-    AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE text/plain text/html text/xml text/css application/xml application/xhtml+xml application/javascript application/x-javascript
 </IfModule>
 
-# Controle de taxa de requisições
-<IfModule mod_ratelimit.c>
-    # Limita a largura de banda para 400KB/s
-    SetOutputFilter RATE_LIMIT
-    SetEnv rate-limit 400
-</IfModule>
-
-<IfModule mod_evasive20.c>
-    # Número máximo de requisições para uma página em específico
-    DOSPageCount 2
-    # Intervalo de tempo para contar as requisições (em segundos)
-    DOSPageInterval 1
-    # Tempo de bloqueio (em segundos)
-    DOSBlockingPeriod 10
-</IfModule>
-
-# Limitar conexões simultâneas
-<IfModule mod_qos.c>
-    # Máximo de conexões simultâneas por IP
-    QS_ClientEntries 10
-    # Máximo de conexões simultâneas para o servidor
-    QS_SrvMaxConnPerIP 50
-</IfModule>
-
-# Permitir acesso aos scripts e CSS específicos
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    # Permitir acesso a arquivos específicos fora do public
-    RewriteCond %{REQUEST_URI} \.(js|css|png|jpg|jpeg|gif|webp|svg)$
-    RewriteRule ^(.*)$ ../../$1 [L]
-</IfModule>
-
-# Configurar headers corretos para JS e CSS
-<FilesMatch "\.(js|css)$">
-    Header set Cache-Control "public, max-age=31536000"
-    Header set X-Content-Type-Options "nosniff"
-</FilesMatch>
-
-# Configurar headers corretos para arquivos estáticos
+# Headers para arquivos estáticos
 <FilesMatch "\.(js|css|png|jpg|jpeg|gif|webp|svg)$">
     Header set Cache-Control "public, max-age=31536000"
-    Header set X-Content-Type-Options "nosniff"
 </FilesMatch>
