--- a/public/.htaccess
+++ b/public/.htaccess
@@ -42,15 +42,20 @@ RewriteEngine On
     RewriteEngine On
     RewriteBase /
     
-    # Se o arquivo/diretório não existe, redireciona para index.php
+    # Permitir acesso direto a arquivos existentes
+    RewriteCond %{REQUEST_FILENAME} -f [OR]
+    RewriteCond %{REQUEST_FILENAME} -d
+    RewriteRule ^ - [L]
+    
+    # Redirecionar todas as outras requisições para o index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php [L,QSA]
     
-    # Não redirecionar para arquivos/diretórios existentes
-    RewriteCond %{REQUEST_FILENAME} -f [OR]
-    RewriteCond %{REQUEST_FILENAME} -d
-    RewriteRule ^ - [L]
+    # Garantir que as URLs sem .php funcionem
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}.php -f
+    RewriteRule ^([^\.]+)$ $1.php [NC,L]
 </IfModule>
 
 # Cache para arquivos estáticos
