--- a/public/.htaccess
+++ b/public/.htaccess
@@ -90,3 +90,10 @@
 #     AddType text/javascript .js
 #     AddType application/javascript .js
 # </IfModule>
+
+# Permitir acesso ao arquivo seo_pages.json
+<FilesMatch "seo_pages\.json$">
+    Require all granted
+    Header set Access-Control-Allow-Origin "*"
+    Header set Content-Type "application/json"
+</FilesMatch>
