--- a/public/.htaccess
+++ b/public/.htaccess
@@ -91,6 +91,10 @@
 #     AddType application/javascript .js
 # </IfModule>
 
+# Permitir acesso geral
+Require all granted
+Header set Access-Control-Allow-Origin "*"
+
 # Permitir acesso ao arquivo seo_pages.json
 <FilesMatch "seo_pages\.json$">
     Require all granted
