--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,68 +19,68 @@
 </IfModule>
 
 # Content Security Policy (CSP)
-<IfModule mod_headers.c>
-    Header set Content-Security-Policy "
-        # Fontes de conteúdo padrão
-        default-src 'self';
+# <IfModule mod_headers.c>
+#     Header set Content-Security-Policy "
+#         # Fontes de conteúdo padrão
+#         default-src 'self';
 
-        # Scripts permitidos
-        script-src 'self' 
-            'unsafe-inline' 
-            'unsafe-eval' 
-            https://cdn.jsdelivr.net 
-            https://code.jquery.com 
-            https://cdnjs.cloudflare.com;
+#         # Scripts permitidos
+#         script-src 'self' 
+#             'unsafe-inline' 
+#             'unsafe-eval' 
+#             https://cdn.jsdelivr.net 
+#             https://code.jquery.com 
+#             https://cdnjs.cloudflare.com;
 
-        # Estilos permitidos
-        style-src 'self' 
-            'unsafe-inline' 
-            https://cdn.jsdelivr.net 
-            https://fonts.googleapis.com;
+#         # Estilos permitidos
+#         style-src 'self' 
+#             'unsafe-inline' 
+#             https://cdn.jsdelivr.net 
+#             https://fonts.googleapis.com;
 
-        # Fontes permitidas
-        font-src 'self' 
-            https://fonts.gstatic.com 
-            https://cdn.jsdelivr.net;
+#         # Fontes permitidas
+#         font-src 'self' 
+#             https://fonts.gstatic.com 
+#             https://cdn.jsdelivr.net;
 
-        # Imagens permitidas
-        img-src 'self' 
-            data: 
-            https: 
-            blob:;
+#         # Imagens permitidas
+#         img-src 'self' 
+#             data: 
+#             https: 
+#             blob:;
 
-        # Conexões permitidas
-        connect-src 'self' 
-            https://api.exemplo.com;
+#         # Conexões permitidas
+#         connect-src 'self' 
+#             https://api.exemplo.com;
 
-        # Frames permitidos
-        frame-src 'self' 
-            https://www.google.com 
-            https://www.youtube.com;
+#         # Frames permitidos
+#         frame-src 'self' 
+#             https://www.google.com 
+#             https://www.youtube.com;
 
-        # Objetos permitidos
-        object-src 'none';
+#         # Objetos permitidos
+#         object-src 'none';
 
-        # Manifesto permitido
-        manifest-src 'self';
+#         # Manifesto permitido
+#         manifest-src 'self';
 
-        # Base URI
-        base-uri 'self';
+#         # Base URI
+#         base-uri 'self';
 
-        # Form actions
-        form-action 'self';
+#         # Form actions
+#         form-action 'self';
 
-        # Frame ancestors
-        frame-ancestors 'self';
+#         # Frame ancestors
+#         frame-ancestors 'self';
 
-        # Upgrade insecure requests
-        upgrade-insecure-requests;
-    "
+#         # Upgrade insecure requests
+#         upgrade-insecure-requests;
+#     "
 
-    # Outras headers de segurança importantes
-    Header set X-Content-Type-Options "nosniff"
-    Header set X-Frame-Options "SAMEORIGIN"
-    Header set X-XSS-Protection "1; mode=block"
-    Header set Referrer-Policy "strict-origin-when-cross-origin"
-    Header set Permissions-Policy "geolocation=(), microphone=(), camera=()"
+#     # Outras headers de segurança importantes
+#     Header set X-Content-Type-Options "nosniff"
+#     Header set X-Frame-Options "SAMEORIGIN"
+#     Header set X-XSS-Protection "1; mode=block"
+#     Header set Referrer-Policy "strict-origin-when-cross-origin"
+#     Header set Permissions-Policy "geolocation=(), microphone=(), camera=()"
 </IfModule>
