--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,15 +3,17 @@
     RewriteEngine On
     RewriteBase /
 
-#     # Remover referência ao NewProject/Host/www
-#     RewriteCond %{REQUEST_URI} !^/
-#     RewriteRule ^(.*)$ /$1 [R=301,L]
+    # Redireciona www para non-www (opcional)
+    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
-#     # Se o arquivo/diretório não existe, redireciona para index.php
-#     RewriteCond %{REQUEST_FILENAME} !-f
-#     RewriteCond %{REQUEST_FILENAME} !-d
-#     RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
-# </IfModule>
+    # Não redireciona arquivos e diretórios existentes
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+
+    # Redireciona todas as requisições para index.php
+    RewriteRule ^(.*)$ index.php [QSA,L]
+</IfModule>
 
 # # Se mod_rewrite não estiver disponível
 # <IfModule !mod_rewrite.c>
@@ -83,4 +85,4 @@
 #     Header set X-XSS-Protection "1; mode=block"
 #     Header set Referrer-Policy "strict-origin-when-cross-origin"
 #     Header set Permissions-Policy "geolocation=(), microphone=(), camera=()"
-</IfModule>
+# </IfModule>
