--- a/public/.htaccess
+++ b/public/.htaccess
@@ -86,3 +86,51 @@
 #     Header set Referrer-Policy "strict-origin-when-cross-origin"
 #     Header set Permissions-Policy "geolocation=(), microphone=(), camera=()"
 # </IfModule>
+
+# Previne listagem de diretórios
+Options -Indexes
+
+# Habilita o mod_rewrite
+RewriteEngine On
+
+# Se o arquivo ou diretório não existe
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
+# Redireciona para o index.php
+RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+
+# Tratamento de erros para arquivos estáticos
+<FilesMatch "\.(ico|png|jpg|jpeg|gif|webp|svg|css|js|woff|woff2|ttf|eot)$">
+    # Se o arquivo não existe, retorna 404 silenciosamente
+    ErrorDocument 404 "File not found"
+    # Previne log de erro no PHP
+    php_flag log_errors off
+</FilesMatch>
+
+# Cache para arquivos estáticos
+<IfModule mod_expires.c>
+    ExpiresActive On
+    
+    # Favicon
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    
+    # Imagens
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/webp "access plus 1 year"
+    ExpiresByType image/svg+xml "access plus 1 year"
+    
+    # Fontes
+    ExpiresByType font/ttf "access plus 1 year"
+    ExpiresByType font/otf "access plus 1 year"
+    ExpiresByType font/woff "access plus 1 year"
+    ExpiresByType font/woff2 "access plus 1 year"
+    
+    # CSS e JavaScript
+    ExpiresByType text/css "access plus 1 year"
+    ExpiresByType text/javascript "access plus 1 year"
+    ExpiresByType application/javascript "access plus 1 year"
+</IfModule>
