--- a/public/.htaccess
+++ b/public/.htaccess
@@ -16,9 +16,9 @@
 </IfModule>
 
 # Força HTTPS
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# RewriteEngine On
+# RewriteCond %{HTTPS} off
+# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 # Adiciona headers de segurança
 <IfModule mod_headers.c>
