--- a/public/.htaccess
+++ b/public/.htaccess
@@ -22,7 +22,7 @@
 
 # Adiciona headers de segurança
 <IfModule mod_headers.c>
-    # Header set X-XSS-Protection "1; mode=block"
+    Header set X-XSS-Protection "1; mode=block"
     # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     # Header set X-Content-Type-Options "nosniff"
     # Header set X-Frame-Options "SAMEORIGIN"
