--- a/public/.htaccess
+++ b/public/.htaccess
@@ -25,8 +25,8 @@
     Header set X-XSS-Protection "1; mode=block"
     Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     Header set X-Content-Type-Options "nosniff"
-    # Header set X-Frame-Options "SAMEORIGIN"
-    # Header set Referrer-Policy "strict-origin-when-cross-origin"
+    Header set X-Frame-Options "SAMEORIGIN"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
 
 # # Se mod_rewrite não estiver disponível
