--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,13 +14,9 @@
     # Redireciona todas as requisições para index.php
     RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
-# Redireciona para o HTTPS independente do domínio
-RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
-
-# Adiciona www. no prefixo do domínio
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^ https://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+RewriteCond %{HTTPS} !=on
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
 
 # Adiciona headers de segurança
 <IfModule mod_headers.c>
