--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,99 +1,103 @@
-# Verifica se mod_rewrite está disponível
+# Verifica se o módulo de reescrita está disponível
+RewriteEngine On
+
+# Headers de segurança
+<IfModule mod_headers.c>
+    # Configurações de cookies mais seguras
+    Header always edit Set-Cookie (.*) "$1; HttpOnly; Secure; SameSite=Strict"
+    
+    # Headers de segurança aprimorados
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Frame-Options "DENY"
+    Header set X-Content-Type-Options "nosniff"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+    Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+</IfModule>
+
+# Configurações de diretório
+<IfModule mod_autoindex.c>
+    Options -Indexes +FollowSymLinks
+</IfModule>
+
+# Proteção de arquivos - IMPORTANTE: Mudando de "granted" para "all denied" exceto arquivos públicos
+<IfModule mod_authz_core.c>
+    # Protege arquivos ocultos
+    <FilesMatch "^\.(?!well-known)">
+        Require all denied
+    </FilesMatch>
+    
+    # Bloqueia acesso a arquivos sensíveis
+    <FilesMatch "(?i:composer\.lock|\.gitignore|\.env)$">
+        Require all denied
+    </FilesMatch>
+    
+    # Permite acesso a arquivos estáticos
+    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|webp|svg|ico|woff|woff2|ttf|eot|json)$">
+        Require all granted
+    </FilesMatch>
+</IfModule>
+
+# Regras de reescrita para arquivos estáticos
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteBase /
-
-    # Redireciona www para non-www (opcional)
-    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
-
-    # Não redireciona arquivos e diretórios existentes
+    
+    # Permitir acesso direto a arquivos existentes
+    RewriteCond %{REQUEST_FILENAME} -f [OR]
+    RewriteCond %{REQUEST_FILENAME} -d
+    RewriteRule ^ - [L]
+    
+    # Redirecionar todas as outras requisições para o index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-
-    # Redireciona todas as requisições para index.php
-    RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteRule ^(.*)$ index.php [L,QSA]
+    
+    # Garantir que as URLs sem .php funcionem
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}.php -f
+    RewriteRule ^([^\.]+)$ $1.php [NC,L]
 </IfModule>
-# RewriteCond %{HTTPS} !=on
-# RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-# RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
-
-# Adiciona headers de segurança
-<IfModule mod_headers.c>
-    Header set X-XSS-Protection "1; mode=block"
-    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
-    Header set X-Content-Type-Options "nosniff"
-    Header set X-Frame-Options "SAMEORIGIN"
-    Header set Referrer-Policy "strict-origin-when-cross-origin"
-</IfModule>
-
-# # Se mod_rewrite não estiver disponível
-# <IfModule !mod_rewrite.c>
-#     ErrorDocument 500 "Mod_rewrite não está ativado. Por favor, ative-o no Apache."
-# </IfModule>
-
-# Content Security Policy (CSP)
-<IfModule mod_headers.c>
-    # Header set Content-Security-Policy "
-        # default-src 'self';
-        # script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://code.jquery.com https://cdnjs.cloudflare.com;
-        # style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com;
-        # img-src 'self' data: https: blob:;
-        # font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net;
-        # # connect-src 'self';
-        # # frame-src 'self';
-        # # object-src 'none';
-        # # base-uri 'self';
-        # # form-action 'self';
-        # # frame-ancestors 'self';
-        # # upgrade-insecure-requests;
-        # # block-all-mixed-content"
-</IfModule>
-
-# Previne listagem de diretórios
-Options -Indexes
-
-# Habilita o mod_rewrite
-RewriteEngine On
-
-# Se o arquivo ou diretório não existe
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-
-# Redireciona para o index.php
-RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
-
-# Tratamento de erros para arquivos estáticos
-<FilesMatch "\.(ico|png|jpg|jpeg|gif|webp|svg|css|js|woff|woff2|ttf|eot)$">
-    # Se o arquivo não existe, retorna 404 silenciosamente
-    ErrorDocument 404 "File not found"
-    # Previne log de erro no PHP
-    php_flag log_errors off
-</FilesMatch>
 
 # Cache para arquivos estáticos
 <IfModule mod_expires.c>
     ExpiresActive On
-    
-    # Favicon
-    ExpiresByType image/x-icon "access plus 1 year"
-    ExpiresByType image/png "access plus 1 year"
-    
-    # Imagens
+    ExpiresByType image/jpg "access plus 1 year"
     ExpiresByType image/jpeg "access plus 1 year"
     ExpiresByType image/gif "access plus 1 year"
     ExpiresByType image/png "access plus 1 year"
     ExpiresByType image/webp "access plus 1 year"
-    ExpiresByType image/svg+xml "access plus 1 year"
-    
-    # Fontes
-    ExpiresByType font/ttf "access plus 1 year"
-    ExpiresByType font/otf "access plus 1 year"
-    ExpiresByType font/woff "access plus 1 year"
-    ExpiresByType font/woff2 "access plus 1 year"
-    
-    # CSS e JavaScript
-    ExpiresByType text/css "access plus 1 year"
-    ExpiresByType text/javascript "access plus 1 year"
-    ExpiresByType application/javascript "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
 </IfModule>
+
+# Compressão GZIP
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain text/html text/xml text/css application/xml application/xhtml+xml application/javascript application/x-javascript
+</IfModule>
+
+# Headers para arquivos estáticos
+<FilesMatch "\.(js|css|png|jpg|jpeg|gif|webp|svg)$">
+    Header set Cache-Control "public, max-age=31536000"
+</FilesMatch>
+
+# Adicione ou verifique se existe estas linhas
+AddType text/css .css
+AddType application/javascript .js
+
+# Configuração de tipos MIME
+<IfModule mod_mime.c>
+    AddType text/css .css
+    AddType text/javascript .js
+    AddType application/javascript .js
+</IfModule>
+
+# Permitir acesso geral
+Require all granted
+Header set Access-Control-Allow-Origin "*"
+
+# Permitir acesso ao arquivo seo_pages.json
+<FilesMatch "seo_pages\.json$">
+    Require all granted
+    Header set Access-Control-Allow-Origin "*"
+    Header set Content-Type "application/json"
+</FilesMatch>
